<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <artifactId>tests-jdkspecifics-jdk9</artifactId>

    <parent>
        <groupId>org.jboss.eap.qe</groupId>
        <artifactId>tests-jdkspecifics</artifactId>
        <version>1.0.0.Final-SNAPSHOT</version>
    </parent>

    <properties>
        <maven.compiler.target>9</maven.compiler.target>
        <maven.compiler.source>9</maven.compiler.source>
        <maven.compiler.testTarget>9</maven.compiler.testTarget>
        <maven.compiler.testSource>9</maven.compiler.testSource>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <jboss.home/>
        <modular.jvm.args/>
        <version.jboss.bom.eap>6.3.0.GA</version.jboss.bom.eap>
        <version.arquillian-bom>1.4.1.Final</version.arquillian-bom>
        <version.arq-as-container>7.2.0.Final</version.arq-as-container>
        <version.org.jboss.ejb-client>7.2.0.Final</version.org.jboss.ejb-client>
        <version.org.jboss.ejb3-ext-api>2.1.0</version.org.jboss.ejb3-ext-api>
        <version.org.wildfly.extras.creaper>0.9.6</version.org.wildfly.extras.creaper>
        <version.square.okhttp>2.2.0</version.square.okhttp>
    </properties>

    <dependencyManagement>
        <dependencies>
            <dependency>
                <groupId>org.jboss.arquillian</groupId>
                <artifactId>arquillian-bom</artifactId>
                <version>${version.arquillian-bom}</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>
        </dependencies>
    </dependencyManagement>

    <dependencies>
        <dependency>
            <groupId>junit</groupId>
            <artifactId>junit</artifactId>
            <version>4.13.1</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.jboss.spec</groupId>
            <artifactId>jboss-javaee-all-6.0</artifactId>
            <version>3.0.3.Final</version>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>org.jboss.ejb3</groupId>
            <artifactId>jboss-ejb3-ext-api</artifactId>
            <version>${version.org.jboss.ejb3-ext-api}</version>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>org.jboss.arquillian.junit</groupId>
            <artifactId>arquillian-junit-container</artifactId>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.jboss.arquillian.protocol</groupId>
            <artifactId>arquillian-protocol-servlet</artifactId>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.jboss.shrinkwrap</groupId>
            <artifactId>shrinkwrap-impl-base</artifactId>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.wildfly.extras.creaper</groupId>
            <artifactId>creaper-core</artifactId>
            <version>${version.org.wildfly.extras.creaper}</version>
            <exclusions>
                <exclusion>
                    <groupId>org.jboss.as</groupId>
                    <artifactId>jboss-as-controller-client</artifactId>
                </exclusion>
                <exclusion>
                    <groupId>org.jboss.remoting3</groupId>
                    <artifactId>jboss-remoting</artifactId>
                </exclusion>
            </exclusions>
        </dependency>
        <dependency>
            <groupId>org.wildfly.extras.creaper</groupId>
            <artifactId>creaper-commands</artifactId>
            <version>${version.org.wildfly.extras.creaper}</version>
            <exclusions>
                <exclusion>
                    <groupId>org.jboss.as</groupId>
                    <artifactId>jboss-as-controller-client</artifactId>
                </exclusion>
                <exclusion>
                    <groupId>org.jboss.remoting3</groupId>
                    <artifactId>jboss-remoting</artifactId>
                </exclusion>
            </exclusions>
        </dependency>
        <dependency>
            <groupId>com.sun.xml.ws</groupId>
            <artifactId>jaxws-ri</artifactId>
            <version>2.3.0</version>
            <type>pom</type>
        </dependency>
    </dependencies>

    <profiles>
        <profile>
            <id>eap6</id>
            <activation>
                <property>
                    <name>!eap7</name>
                </property>
            </activation>
            <dependencies>
                <dependency>
                    <groupId>org.jboss.as</groupId>
                    <artifactId>jboss-as-arquillian-container-managed</artifactId>
                    <version>${version.arq-as-container}</version>
                    <scope>test</scope>
                </dependency>
                <dependency>
                    <groupId>org.jboss.as</groupId>
                    <artifactId>jboss-as-ejb-client-bom</artifactId>
                    <version>${version.org.jboss.ejb-client}</version>
                    <type>pom</type>
                </dependency>
            </dependencies>
            <properties>
                <node1RemotingPort>4447</node1RemotingPort>
                <node2RemotingPort>4547</node2RemotingPort>
                <node2.management.port>10099</node2.management.port>
            </properties>
        </profile>
        <profile>
            <id>eap7</id>
            <activation>
                <property>
                    <name>eap7</name>
                </property>
            </activation>
            <dependencies>
                <dependency>
                    <groupId>org.wildfly.arquillian</groupId>
                    <artifactId>wildfly-arquillian-container-managed</artifactId>
                    <version>2.1.1.Final</version>
                    <scope>test</scope>
                </dependency>
                <dependency>
                    <groupId>commons-io</groupId>
                    <artifactId>commons-io</artifactId>
                    <version>2.4</version>
                </dependency>
                <dependency>
                    <groupId>org.wildfly</groupId>
                    <artifactId>wildfly-ejb-client-bom</artifactId>
                    <version>8.2.0.Final</version>
                    <type>pom</type>
                </dependency>
            </dependencies>
            <properties>
                <node1RemotingPort>8080</node1RemotingPort>
                <node2RemotingPort>8180</node2RemotingPort>
                <node2.management.port>10090</node2.management.port>
            </properties>
        </profile>
        <profile>
            <id>modular-jvm-args</id>
            <activation>
                <jdk>[9,)</jdk>
            </activation>
            <properties>
                <modular.jvm.args>--add-modules=java.se</modular.jvm.args>
            </properties>
        </profile>
    </profiles>

    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <version>2.16</version>
                <configuration>
                    <systemProperties>
                        <jboss.home>${basedir}/../${tests.jdkspecifics.runtime.dir}</jboss.home>
                        <modular.jvm.args>${modular.jvm.args}</modular.jvm.args>
                    </systemProperties>
                </configuration>
            </plugin>
        </plugins>
    </build>

</project>
